# FinApp

./: .coverage  .env.example  .gitignore  .pre-commit-config.yaml  404.html  ARCHITECTURE.md  CLAUDE.md  CLI_GUIDE.md  EXAMPLES.md  FOLDER_STRUCTURE.md  INDEX.md  MIGRATION_ROADMAP.md  PHASE_1_COMPLETE.md  README.md  STATUS_REPORT.md  TEST_IMPROVEMENT_SUMMARY.md  USEFUL_COMMANDS.md  index.html  mkdocs.yml  plan.md  pytest.ini  requirements-dev.txt  requirements.txt  sitemap.xml
backend/: Makefile  QUICKSTART_NEW_ARCH.md  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_statement_import.py
backend/finlite/: __init__.py  config.py  logging.py
backend/finlite/api/: __init__.py
backend/finlite/application/: README.md  exceptions.py
backend/finlite/application/dtos/: __init__.py  account_dto.py  transaction_dto.py
backend/finlite/application/use_cases/: __init__.py  apply_rules.py  build_card_statement.py  create_account.py  export_beancount.py  pay_card.py  (+11 more)
backend/finlite/cli/: app.py
backend/finlite/core/: accounts.py  transactions.py
backend/finlite/db/: __init__.py
backend/finlite/domain/: README.md  __init__.py
backend/finlite/export/: __init__.py  beancount.py
backend/finlite/infrastructure/: README.md
backend/finlite/ingest/: __init__.py  ofx.py  utils.py
backend/finlite/interfaces/: README.md  __init__.py
backend/finlite/ml/: __init__.py
backend/finlite/nlp/: __init__.py  intents.py
backend/finlite/reports/: __init__.py
backend/finlite/rules/: __init__.py  mapping.py
backend/finlite/shared/: __init__.py  event_bus.py
backend/finlite/tui/: __init__.py
backend/finlite_legacy/: config.py
backend/finlite_legacy/cli/: __init__.py  app.py
backend/finlite_legacy/core/: __init__.py
backend/finlite_legacy/data/: __init__.py
backend/finlite_legacy/db/: migrator.py  models.py  session.py
backend/finlite_legacy/ingest/: nubank_csv.py
backend/finlite_legacy/nlp/: ask_agent.py  llm_agent.py
backend/finlite_legacy/reports/: __init__.py  cashflow.py
backend/finlite_legacy/rules/: mapping.py
backend/finlite_legacy/tui/: __init__.py
backend/scripts/: cli_debug.py  seed_demo_data.py
backend/tests/: conftest.py  test_accounts.py  test_beancount_export.py  test_cli_workflow.py  test_import_nubank.py  test_nlp_parser.py  test_phase2_acceptance.py  test_rules_mapping.py  test_sqlite_pragmas.py  test_transactions.py
backend/tests/integration/: test_cli_accounts.py  test_cli_transactions.py
backend/tests_legacy/: conftest.py.bak  test_cashflow.py  test_cli_workflow.py  test_import_ofx.py  test_llm_agent.py  test_rules_apply.py
(+240 files in other folders)
